# cosmos

./: .env  .envrc  .gitignore  .mocharc.cjs  .npmrc  .prettierrc.js  .pylint.toml  LICENSE  README.md  cosmos.code-workspace  eslint.config.js  lint-staged.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
project/: README.md
project/cyrealworld/: database.json
projects/: README.md
projects/aquaria/: .pylint.toml  README.md  pyproject.toml
projects/aquaria/test/api/: user_test.py
projects/aquaria/test/e2e/: conftest.py  testTodo_test.py
projects/aquaria/test/pom/: basePage.py  todoPage.py
projects/bats/: README.md  bats  test.bats  testb.bats
projects/caprica/: README.md  cypress.config.js  package-lock.json  package.json
projects/caprica/src/todo/: index.js
projects/caprica/test/: hooks.js  mocharc.cjs  nyc.config.cjs
projects/caprica/test/e2e/: global.js
projects/caprica/test/e2e/com.todomvc/: page.test.js
projects/caprica/test/pom/com.todomvc/: homePage.js
projects/caprica/test/types/: globals.d.ts
projects/caprica/test/unit/todo/: todo.test.js
projects/cosmos/: README.md
projects/cosmos/cyrealworld/: Dockerfile
projects/cyrealworld/: README.md  database-seed.json
projects/lab/athena/: .env  README.md  compose.yaml
projects/lab/athena/airflow/config/: airflow.cfg
projects/lab/athena/airflow/dags/: README.md
projects/lab/athena/airflow/plugins/: README.md
projects/loggersh/: README.md  index.sh
projects/scorpia/: .env  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
projects/scorpia/src/test/e2e/com.todomvc/e2e/: fixtures.ts  todos.test.ts
projects/scorpia/src/test/e2e/com.todomvc/pom/: basePage.ts  homePage.ts
projects/service/container/kind/: config.yml
test/: mocharc.cjs
test/unit/: placeholder.test.js  placeholder.test.ts
